# langchain_tutorials

./: .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/: chat.ipynb  lesson_1.ipynb  rag1.ipynb
src/app/: app.py  sample_interaction.txt
